@@ -4,6 +4,13 @@
 	  src/pdsh/Makefile.am, src/pdsh/Makefile.in : 
 	  Install and package rpdcp and its man page.
 
+	* src/common/err.h, src/common/err.c : Optionally keep domain
+	  part of name with "%S" format specifier when err_no_strip_domain()
+	  is called.
+
+	* src/common/dsh.c : If any two targets have differing domains,
+	  do not strip the domain in output labels.
+
 2006-12-07  Albert Chu <chu11@llnl.gov>
 
 	Support a Reverse pdcp option.
